--- a/index.html
+++ b/index.html
@@ -17,33 +17,110 @@
     <style>[v-cloak]{display: none;}</style>
     
     <!-- javascript -->
-    <script src="javscript.js" defer></script>
+    <script src="javascript.js" defer></script>
 
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-           <!-- <div class="leftone">
-                <img src="img/avatar_io.jpg" alt="">
-                <span>Manuel</span>
+	<div id="app" class="container">
+		<!-- contenitore sx -->
+		<div class="left">
+			<div class="header-left">
+				<div class="header-left-logo">
+					<img src="img/avatar_io.jpg" alt="User avatar">
+					<h3>Manuel</h3>
+				</div>
+				<div class="header-left-icons">
+					<i class="fas fa-circle-notch"></i>
+					<i class="fas fa-comment-alt"></i>
+					<i class="fas fa-ellipsis-v"></i>
+				</div>
+			</div>
+			<div class="left-disclaimer">
+				<div class="left-disclaimer-logo">
+					<i class="fa fa-bell-slash" aria-hidden="true"></i>
+				</div>
+				<div class="left-disclaimer-text">
+					<h3>Ricevi notifiche di nuovi messaggi</h3>
+					<a href="#">Attiva notifiche desktop</a>
+				</div>
+			</div>
+			<div class="left-searchbar">
+				<label class="search-label" for="search">
+					<i class="fa fa-search" aria-hidden="true"></i>
+				</label>
+				<input
+					id="contacts-filter"
+					class="left-searchbar-input"
+					placeholder="Cerca o inizia una nuova chat"
+					name="search"
+				>
+			</div>
+			
+            <div class="sezione-chat">
+                <div v-for="(contact, i) in contacts" class="contatti" :class="{visible: contact.visible}" @click="selectedChat(i)">
+                    <img :src="contact.avatar" class="img-contatti">
+                    <div class="info">
+                        <h4 class="contact-name">{{ contact.name }}</h4>
+                        <div class="contact-last-message" v-if="contact.messages.length != 0">{{ contact.messages[contact.messages.length - 1].message }}</div>
+                    </div>
+                    <span class="last-message-time" v-if="contact.messages.length != 0">{{ contact.messages[contact.messages.length - 1].time }}</span>
+                </div>
             </div>
 
-            <div class="rightone">
-                <i class="fas fa-circle-notch"></i>
-				<i class="fas fa-comment-alt"></i>
-				<i class="fas fa-ellipsis-v"></i>
-            </div> -->
+		</div>
+		<!-- /contenitore sx -->
+		<!-- contenitore dx -->
+		<div class="right">
+			<div class="header-right">
+				<div class="header-right-logo">
+					<img src="img/avatar_1.jpg" alt="contact name">
+					<h3>
+						<span id="header-right-contact-name">Contact Name</span><br>
+						<small class="time">Ultimo accesso oggi alle --last-message-date--</small>
+					</h3>
+				</div>
+				<div class="header-right-icons">
+					<i class="fas fa-search"></i>
+					<i class="fas fa-paperclip"></i>
+					<i class="fas fa-ellipsis-v"></i>
+				</div>
+			</div>
+			<div class="right-messages-container">
+				<div class="right-messages">
+					<div class='message sent'>
+						<span class="message-text">message content</span>
+						<span class="message-time">18/11/2022 00:00:00</span>
+						<i class="fa fa-chevron-down f-right message-options"></i>
+						<div class="message-options-panel" style="display: none;">
+							<div class="message-info">Info messaggio</div>
+							<div class="message-destroy">Cancella messaggio</div>
+						</div>
+					</div>
 
-            <div class="profilo"></div>
-            <div class="notifiche"></div>
-            <div class="cerca"></div>
-            <div class="chat"></div>
-        </div>
-        <div class="right">
-            <div class="soggetto"></div>
-            <div class="coversazione"></div>
-            <div class="messaggio"></div>
-        </div>
-    </div>
+					<div class='message received'>
+						<span class="message-text">message content</span>
+						<span class="message-time">18/11/2022 00:00:00</span>
+						<i class="fa fa-chevron-down f-right message-options"></i>
+						<div class="message-options-panel" style="display: none;">
+							<div class="message-info">Info messaggio</div>
+							<div class="message-destroy">Cancella messaggio</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="right-footer">
+				<div class="right-footer-icon f-left">
+					<i class="far fa-smile"></i>
+				</div>
+				<input class="new-message-inputs" placeholder="Scrivi un messaggio">
+				<div class="right-footer-icon f-right">
+					<i class="fa fa-microphone" aria-hidden="true"></i>
+				</div>
+			</div>
+		</div>
+		<!-- /contenitore dx -->
+	</div>
+
 </body>
+
 </html>
